# rust-dslreports

./: Cargo.toml  aliases.js  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
dslreports/: all.html  fn.get_download_speed_stream.html  fn.get_ping_from_server.html  fn.get_server_config.html  fn.get_servers_sorted_by_ping.html  index.html  sidebar-items.js  struct.DSLReportsResponse.html  struct.DSLReportsResponsePrefs.html
examples/: download_speed.rs
hyper/: struct.Body.html
hyper/body/: struct.Body.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  (+5 more)
openssl/asn1/: struct.Asn1Time.html  struct.Asn1TimeRef.html
openssl/bn/: struct.BigNum.html  struct.BigNumRef.html
openssl/cms/: struct.CMSOptions.html
openssl/ocsp/: struct.OcspFlag.html
openssl/pkcs7/: struct.Pkcs7Flags.html
openssl/ssl/: struct.ExtensionContext.html  struct.ShutdownState.html  struct.SslMode.html  struct.SslOptions.html  struct.SslSessionCacheMode.html  struct.SslVerifyMode.html
reqwest/: struct.Method.html  struct.StatusCode.html  struct.Url.html
reqwest/header/: struct.HeaderName.html  struct.HeaderValue.html  trait.AsHeaderName.html
src/: lib.rs
src/dslreports/: lib.rs.html
tokio/: all.html
(+11 files in other folders)
