[package]
name = "rust-dslreports"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
time = "0.1.42"
hyper = "0.12.25"
hyper-tls = "0.3.1"
futures = "0.1.25"
log = "0.4.6"

[dev-dependencies]
env_logger = "0.6.0"
