[package]
name = "rust-dslreports"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.89", features = ["derive"] }
time = "0.1.42"
futures = "0.1.25"
log = "0.4.6"
actix-web = { version = "0.7.18", features = ["tls"] }

[dev-dependencies]
env_logger = "0.6.0"
