[package]
name = "dslreports"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.7"
futures = "0.3.4"
log = "0.4.8"
reqwest = { version = "0.10.4", features = ["stream", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "0.2.13", features = ["full"] }

[dev-dependencies]
env_logger = "0.7.1"
